--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,9 +1,12 @@
-
 .bebe-cows {
+	// fonts
+	--font-header: 'Merienda', cursive;
+	--font-caption: 'Marck Script';
+
+	// colors
 	--bg-color: #183b24;
 	--bg-color-caption: #3B1B18;
 	--color-header: #F0A04B;
-	//--color-caption: #E1EEDD;
 	--color-caption: #FEFBE9;
 }
 
