--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,39 +1,39 @@
-.bebe-cows__header {
+.bebe-cows-header {
 	display: flex;
 	flex-direction: column;
-	margin-bottom: 0.5em;
-	
-	> a {
-		display: block;
+	.bebe-cows__picture {
 		flex: 1;
+		justify-content: center;
+		text-align: center;
 		img {
-			display: block;
 			max-width:30%;
 			margin:0 auto;
 			border-radius: 50%;
+			border: 1px solid var(--bg-color-caption);
+			
 		}
 	}
-	&--wrapper {
+	.bebe-cows__title {
 		flex: 2;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		text-align: center;
 		align-items: center;
+		margin: 0.2em 0 0;
 	}
 }
 
 @include media-query-up(small) {
-	.bebe-cows__header {
+	.bebe-cows-header {
 		flex-direction: row;
+		margin: 0;
 		img {
 			max-width: 100%;
 		}
+		.bebe-cows__title {
+			margin:0;
+		}
 	}
-}
-
-@include media-query-up(medium) {
-	.bebe-cows__header {
-		margin-bottom: 1em;
-	}
+	
 }
