--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,10 +2,8 @@
 
 @import "abstracts/variables";
 @import "abstracts/mixins";
-
-
 @import "base/base";
 @import "base/colors";
-//@import "base/typography";
+@import "base/typography";
 @import "layout/header";
-@import "layout/layout";
+@import "layout/gallery";
