--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,4 +1,5 @@
 .bebe-cows {
+	font-size: 1rem;
 	* {
 		margin: 0;
 		padding: 0;
@@ -6,7 +7,4 @@
 	}
 }
 
-.bebe-cows-container {
-	width: 75%;
-	margin: 0 auto;
-}
+
