--- a/sass/layout/_gallery.scss
+++ b/sass/layout/_gallery.scss
@@ -1,46 +1,38 @@
 
-.bebe-cows__gallery {
+.bebe-cows-gallery {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, 1fr);
 	grid-auto-rows: 1;
 	grid-gap: 0.5em;
 	grid-auto-flow: dense;
-	padding: 0.5em;
+	padding:0 0.5em 0.5em;
 
-	figure {
+	&__item {
 		display: flex;
 		flex-direction: column;
+		img {
+			display: block;
+			max-width: 100%;
+			object-fit: cover;
+			flex: 1;
+		}
+		figcaption {
+			display: flex;
+			padding: 0.25em;
+			text-align: center;
+			justify-content: center;
+		}
 
-	}
-	figcaption {
-		display: flex;
-		padding: 0.25em;
-	}
-
-	img {
-		display: block;
-		max-width: 100%;
-		object-fit: cover;
-		flex: 1;
 	}
 }
 
 @include media-query-up(small) {
-
-	.bebe-cows {
-		h2 {
-			margin-top: 0;
-		}
-	}
-
-	.bebe-cows__gallery {
+	.bebe-cows-gallery {
 		grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 
-		figure:nth-child(even) {
+		&__item:nth-child(even) {
 			grid-column: span 2;
 			grid-row: span 2;
-	
-			
 		}
 	}
 }
