--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,5 +5,6 @@
 @import "base/base";
 @import "base/colors";
 @import "base/typography";
+@import "layout/layout";
 @import "layout/header";
 @import "layout/gallery";
