--- a/sass/base/_colors.scss
+++ b/sass/base/_colors.scss
@@ -1,29 +1,29 @@
+@use "sass:color";
+
 .bebe-cows-container {
-	background-color: var(--bg-color);
+  background-color: var(--bg-color);
 }
 
 .bebe-cows-header__title {
-	h2 {
-		color: var(--color-header);
-	}
-	h3 {
-		background-image: linear-gradient(to right, var(--bg-color-caption) 10%, var(--color-header) 100%);
-		background-clip: text;
-		color: transparent;
-	}
+  h2 {
+    color: var(--color-header);
+  }
+  h3 {
+    color: var(--color-header-secondary);
+  }
 }
 
 .bebe-cows-gallery {
-	&__item
-	figcaption {
-		background-color: var(--bg-color-caption);
-		color: var(--color-caption);
+  &__item
+  figcaption {
+    background-color: var(--bg-color-caption);
+    color: var(--color-caption);
 
-		a {
-			color: inherit;
-			&:hover {
-				color: #FFED85;
-			}
-		}
-	}
+    a {
+      color: inherit;
+      &:hover {
+        color: #FFED85;
+      }
+    }
+  }
 }
