--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -2,27 +2,30 @@
 
 .bebe-cows {
 
-  h2, h3 {
+  h2,
+  h3 {
     font-family: var(--font-header);
   }
-  
+
   h2 {
     font-size: calc(0.5rem + 1.8vw);
     line-height: 1.1;
   }
+
   h3 {
     font-size: calc(0.5rem + 1vw);
     line-height: 1.1;
   }
-  
+
   figcaption {
     font-family: var(--font-caption);
     font-size: 1rem;
     line-height: 1.1;
+
     a {
       text-decoration: none;
     }
-    
+
   }
 }
 
